entered skill enum for Barbarian and overall class skills

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ pom.xml.next
 release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
-.mvn/timing.properties
+.mvn/timing.propertiesK
 .mvn/wrapper/maven-wrapper.jar
