--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <swagger.version>2.9.2</swagger.version>
+        <mysql.version>8.0.16</mysql.version>
         <org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
     </properties>
     <dependencies>
@@ -72,7 +73,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.11</version>
+            <version>${mysql.version}</version>
         </dependency>
     </dependencies>
     <build>
