--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.propertiesK
 .mvn/wrapper/maven-wrapper.jar
+.idea
+pathfinderApp.iml
