--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=pathfinder
 #database
-spring.datasource.url=
-spring.datasource.username=
+spring.datasource.url=jdbc:mysql://localhost:3306/pathfinder
+spring.datasource.username=root
 spring.datasource.password=
-spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+spring.liquibase.change-log=classpath:/liquibase/db-changelog-master.xml
